<resources>
    <string name="app_name">Selfie</string>
    <string name="welcome_text">Welcome!</string>
    <string name="selfie">Selfie!</string>
    <string name="next">Next</string>
    <string name="join">Join Selfie!</string>
    <string name="slogan">See you soon!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="facebook_app_id">1399065600338856</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
