<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/welcome_page_layout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.selfiemobile.selfie.WelcomePage"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:id="@+id/welcome_welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/welcome_button"
        android:textColor="@android:color/white"
        android:background="@drawable/round_button"
        android:shadowColor="#007AFF"
        android:gravity="center"
        android:onClick="clickFunction"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dummy_edit_text"
        />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/second_page_center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:id="@+id/height_anchor_for_image"
        android:layout_above="@+id/second_page_center"
        android:layout_centerHorizontal="true"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="The logo"
        android:id="@+id/welcome_logo"
        android:src = "@drawable/selfie_icon_white"
        android:layout_above="@+id/welcome_welcome"
        android:layout_alignLeft="@+id/welcome_welcome"
        android:layout_alignStart="@+id/welcome_welcome"
        android:layout_alignRight="@+id/welcome_welcome"
        android:layout_alignEnd="@+id/welcome_welcome"
        android:layout_alignTop="@+id/height_anchor_for_image" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selfie"
        android:id="@+id/selfie"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_above="@+id/welcome_welcome"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:background="@drawable/my_edittext"
        android:id="@+id/dummy_edit_text"
        android:hint=" Email"
        android:contentDescription="Email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/welcome_welcome"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
