<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tw__composer_black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.selfiemobile.selfie.SignUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:id="@+id/see_you_soon"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/tw__solid_white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:background="@drawable/round_button"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:id="@+id/sign_up_button"
        android:onClick="secondClickFunction"
        android:textColor="@color/tw__solid_white"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/username_layout"
        android:layout_alignLeft="@+id/email_edit"
        android:layout_alignStart="@+id/email_edit"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_below="@+id/username_layout"
        android:id="@+id/dummy_for_button"

        />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/second_page_center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:id="@+id/height_anchor_for_image"
        android:layout_above="@+id/second_page_center"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/white_image_view"
        android:src = "@drawable/selfie_icon_white"
        android:layout_above="@+id/selfie_name"
        android:layout_alignLeft="@+id/email_edit"
        android:layout_alignStart="@+id/email_edit"
        android:layout_alignRight="@+id/email_edit"
        android:layout_alignEnd="@+id/email_edit"
        android:layout_alignTop="@+id/height_anchor_for_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/selfie_name"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="40dp"
        android:layout_above="@+id/see_you_soon"
        android:layout_centerHorizontal="true" />

    <FrameLayout
        android:layout_below="@+id/see_you_soon"
        android:layout_centerHorizontal="true"
        android:id="@+id/email_edit"

        android:background="@drawable/my_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">
        <EditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="2dp"

            android:background="@drawable/my_edittext"
            android:id="@+id/email_edit_text"
            android:hint=" Email"
            android:contentDescription="Email"
            android:inputType="textEmailAddress"
            android:ems="10"/>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_layout"
        android:layout_below="@+id/email_edit"
        android:layout_alignLeft="@+id/sign_up_button"
        android:layout_alignStart="@+id/sign_up_button"
        android:layout_alignRight="@+id/email_edit"
        android:layout_alignEnd="@+id/email_edit">
        <FrameLayout
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_edit"
            android:background="@drawable/my_edittext"
            android:layout_marginBottom="2dp"
            >

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginLeft="2dp"
                android:hint=" Requested Username"
                android:background="@drawable/my_edittext"
                android:inputType="text"
                android:contentDescription="Username" />
        </FrameLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_availability_view"
            android:src= "@drawable/unavailable"
            android:contentDescription="Availability image"
            android:layout_below="@+id/username_edit"
            android:layout_marginRight="2dp"
            android:layout_alignBottom="@+id/username_availability_view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username_availability_view"
            android:text="Username Unavailable"
            android:layout_gravity="center"
            android:layout_below="@+id/username_edit"
            android:textColor="@color/tw__solid_white"
            android:layout_toRightOf="@+id/image_availability_view"
            android:layout_toEndOf="@+id/image_availability_view" />
    </RelativeLayout>

</RelativeLayout>
